fixed global css for the word wrap

--- a/_styles/global.css
+++ b/_styles/global.css
@@ -199,6 +199,7 @@ blockquote.warning {
 .table-roadmap td, .table-roadmap th {
     /* border: 1px solid #ddd; */
     padding: 8px;
+    word-break: break-word;
 }
 
 .table-roadmap tr:nth-child(even) {
